[refactor] Move the data files to data directory

--- a/data-exploration.ipynb
+++ b/data-exploration.ipynb
@@ -2238,14 +2238,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "(\n",
     "books_word25.drop([\"subtitle\", \"missing_description\", \"age_of_book\", \"words_in_description\"], axis=1)\n",
-    ".to_csv(\"books_cleaned.csv\", index=False)\n",
+    ".to_csv(\"data/books_cleaned.csv\", index=False)\n",
     ")\n",
     "\n"
    ]
