--- a/vector-search.ipynb
+++ b/vector-search.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +387,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "books = pd.read_csv(\"books_cleaned.csv\")\n",
+    "books = pd.read_csv(\"data/books_cleaned.csv\")\n",
     "\n",
     "books"
    ]
@@ -6127,7 +6127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6136,7 +6136,6 @@
     "category_mapping = {\n",
     "    # Fiction Categories\n",
     "    'Fiction': 'Fiction',\n",
-    "    'Juvenile Fiction': \"Children's Fiction\",\n",
     "    'Drama': 'Fiction',\n",
     "    'Literary Criticism': 'Fiction',\n",
     "    'Poetry': 'Fiction',\n",
@@ -6587,7 +6586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -6608,7 +6607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -7936,11 +7935,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "books.to_csv(\"books_with_categories.csv\", index= False)"
+    "books.to_csv(\"data/books_with_categories.csv\", index= False)"
    ]
   }
  ],
