--- a/sentiment_analysis.ipynb
+++ b/sentiment_analysis.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "books = pd.read_csv(\"books_with_categories.csv\")"
+    "books = pd.read_csv(\"data/books_with_categories.csv\")"
    ]
   },
   {
